gcc/testsuite/rust/rustc/ui/error-codes/E0434.rs
fn foo() {
    let y = 5;
    fn bar() -> u32 {
        y // { dg-error ".E0434." "" { target *-*-* } }
    }
}

fn main () {
}

